--- a/src/scss/utilities/_utilities.main.scss
+++ b/src/scss/utilities/_utilities.main.scss
@@ -1,9 +1,4 @@
 /* ==========================================================================
-   Tools
+   Utilities
    ========================================================================== */
 
-
-.test {
-  box-shadow: 0 10px 10px red;
-  display: flex;
-}
