Icons generation - re configuration

--- a/gulpfile.js/templates/sprite.mustache
+++ b/gulpfile.js/templates/sprite.mustache
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8"/>
@@ -18,7 +17,7 @@ This is an all-in-one inline version of the CSS necessary to use the SVG sprite.
 <style type="text/css">
 {{#shapes}}{{#selector.shape}}.{{#classname}}{{expression}}{{/classname}}{{^last}},
 {{/last}}{{/selector.shape}} {
-	background: url("{{{example}}}") {{position.relative.xy}} no-repeat;
+	background: url("/icons/css/{{{example}}}") {{position.relative.xy}} no-repeat;
 	width: {{width.outer}}px;
 	height: {{height.outer}}px;
 }
@@ -101,7 +100,7 @@ pre-defined in the external sprite.
 					<div class="icon-box">
 
 						<!-- {{name}} -->
-						<img src="{{{example}}}#{{name}}" class="{{#selector.shape}}{{#last}}{{#classname}}{{raw}}{{/classname}}-dims{{/last}}{{/selector.shape}}" alt="{{name}}"/>
+						<img src="/icons/css/{{{example}}}#{{name}}" class="{{#selector.shape}}{{#last}}{{#classname}}{{raw}}{{/classname}}-dims{{/last}}{{/selector.shape}}" alt="{{name}}"/>
 
 					</div>
 					<h2>{{name}}</h2>
